@@ -1,3 +1,4 @@
 Port 80
 User nobody
 Group nobody
+DocumentRoot "/test/doc/root"
