@@ -1,6 +1,8 @@
 Revision history for Perl extension App::Info.
 
 0.54
+      - Added the doc_root() method to App::Info::HTTPD::Apache. Patch
+        from Martin Thurn.
 
 0.53  2008-05-05T17:47:18
       - Added the "configure_requires" and "build_requires" parameters to
